# JR

./: .gitignore  TokyoMetro.py  api.py  bot_run.sh  main.py  pyproject.toml  test.py
.github/: copilot-instructions.md
API/: TokyoMetro.py
cogs/: JR_West.py  delay_monitor.py  fare_info.py
env/: config.py  config_example.ini
